; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_csputils.c_mp_csp_trc_to_avcol_trc.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_csputils.c_mp_csp_trc_to_avcol_trc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVCOL_TRC_BT709 = common dso_local global i32 0, align 4
@AVCOL_TRC_IEC61966_2_1 = common dso_local global i32 0, align 4
@AVCOL_TRC_LINEAR = common dso_local global i32 0, align 4
@AVCOL_TRC_GAMMA22 = common dso_local global i32 0, align 4
@AVCOL_TRC_GAMMA28 = common dso_local global i32 0, align 4
@AVCOL_TRC_SMPTEST2084 = common dso_local global i32 0, align 4
@AVCOL_TRC_ARIB_STD_B67 = common dso_local global i32 0, align 4
@AVCOL_TRC_UNSPECIFIED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_csp_trc_to_avcol_trc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %19 [
    i32 134, label %5
    i32 128, label %7
    i32 130, label %9
    i32 133, label %11
    i32 132, label %13
    i32 129, label %15
    i32 131, label %17
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @AVCOL_TRC_BT709, align 4
  store i32 %6, i32* %2, align 4
  br label %21

7:                                                ; preds = %1
  %8 = load i32, i32* @AVCOL_TRC_IEC61966_2_1, align 4
  store i32 %8, i32* %2, align 4
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* @AVCOL_TRC_LINEAR, align 4
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load i32, i32* @AVCOL_TRC_GAMMA22, align 4
  store i32 %12, i32* %2, align 4
  br label %21

13:                                               ; preds = %1
  %14 = load i32, i32* @AVCOL_TRC_GAMMA28, align 4
  store i32 %14, i32* %2, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @AVCOL_TRC_SMPTEST2084, align 4
  store i32 %16, i32* %2, align 4
  br label %21

17:                                               ; preds = %1
  %18 = load i32, i32* @AVCOL_TRC_ARIB_STD_B67, align 4
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %1
  %20 = load i32, i32* @AVCOL_TRC_UNSPECIFIED, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %17, %15, %13, %11, %9, %7, %5
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
